Fixed bugs relating to the spacing/margins around example exercises and section > titlepage > abstracts

--- a/css/ccap-statistics.less
+++ b/css/ccap-statistics.less
@@ -327,9 +327,7 @@ div.part > div.titlepage {display:none;}
 ******************************************************/
 .section > .titlepage {
   .abstract {
-    &::before {
-      font-family: @font-family-statistics;
-    }
+    display: none;
   }
 }
 
@@ -622,6 +620,8 @@ img, figure, subfigure  { margin: 1em; }
 
 // for examples that have a problem/solution structure that need numbered headings
 .example .exercise {
+    margin: 0;
+
     counter-increment: none !important;
     .problem > .title {
       content: "" "Part " counter(chapter, decimal) "." counter(example, decimal) " " "";
